[package]
name = "notnow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntp = "0.5"
time = { version = "0.3.11", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
ctrlc = { version = "3.2.0", features = ["termination"] }
